# general-simulation-framework

./: .deepsource.toml  LICENSE  README.md  main.py  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
docs/: .buildinfo  README.html  about.html  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
docs/_sources/: README.md.txt  index.rst.txt
docs/examples/: example1.html  example1.ipynb  example2.html  example2.ipynb  example3.html  example3.ipynb
docs/src/: src.core.components.rst  src.core.debug.infrastructure.rst  src.core.debug.rst  src.core.events.rst  src.core.modules.rst  src.core.rst  src.dynamic_system.core.rst  src.dynamic_system.discrete_events.dynamic_systems.rst  src.dynamic_system.discrete_events.rst  src.dynamic_system.rst
queue_simulator/: main.py
queue_simulator/communication/: communication.py  server_task.py  server_worker.py
queue_simulator/entities/: __init__.py  available_entities.py  emitter.py  generated_entity.py  name_generator.py
queue_simulator/label/: label.py
queue_simulator/route/: route.py
queue_simulator/server/: server.py  server_property.py  server_state.py
queue_simulator/sink/: sink.py  sink_state.py
queue_simulator/socket_server/: socket_server.py
queue_simulator/source/: __init__.py  source.py  source_property.py  source_state.py  source_test.py
src/core/: config.py
src/dynamic_system/: base_model.py  input_bag.py  input_manager.py  input_model.py  model.py  network_model.py  scheduled_model.py  scheduler.py
src/models/: __init__.py
src/shared/: base_module.py  event.py  event_bus.py  module.py  subscriber.py
src/simulation/: base_simulator.py  discrete_event_simulator.py  discrete_time_simulator.py  simulation_engine.py  simulation_module.py
test/: test_property_types.py
test/examples/: cell.py  example_1.py  linear_automata.py
test/mocks/: base_model_mock.py  dynamic_system_mock.py  mock_emitter.py  model_mock.py
(+454 files in other folders)
