[flake8]
exclude = .git,venv
max-line-length = 120

[tool.black]
line-length = 120
include = \.pyi?$
exclude = \.git
          | \.hg
          | \.mypy_cache
          | \.tox
          | \.venv
          | venv
          | _build
          | buck-out
          | build
          | dist

[metadata]
name = gsm-RolandoAndrade
version = 0.0.1
author = Rolando Andrade
author_email = rolandoandradefernandez@gmail.com
description = General Simulation Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RolandoAndrade/general-simulation-framework
project_urls =
    Bug Tracker = https://github.com/RolandoAndrade/general-simulation-framework/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src